@@ -7,6 +7,7 @@ Changes in version 0.0.3 - UNRELEASED:
    on certain pages.
  * Bug 20973: Silence Gdk warnings on systems with integrated png loader.
  * Bug 20806: Try even harder to exclude gstreamer.
+ * Remove the unused `pulseAudioBox` identifier.
  * Set the security slider to "High" by default on a fresh install.
  * Store the version of the sandbox in the config file, and re-Sync() the
    config, and reinstall the `mozilla.cfg` when things change.
